# rota-viagem

./: Dockerfile  README.md  notebook.ipynb  pyproject.toml
src/app/: app.py
src/models/: BaseModel.py
tests/: test_app.py
